<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/login_layout"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="120dp">


            <TextView
                android:id="@+id/sign"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:background="@drawable/gradient"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif-monospace"
                android:padding="10dp"
                android:text="LogIn"
                android:textAlignment="center"
                android:textColor="@color/white1"
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userEmail"
                style="@style/custom_editText"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@mipmap/ic_account_circle"
                android:hint="Email"
                android:singleLine="true" />

            <EditText
                android:id="@+id/userPassword"
                style="@style/custom_editText"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@mipmap/ic_action_lock_closed"
                android:hint="Password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn"
                android:shadowColor="#A8A8A8"
                android:shadowDx="3"
                android:shadowDy="2"
                android:shadowRadius="8"
                android:text="Login"
                android:textColor="@color/white1"></Button>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:text="Register"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="16sp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textStyle="bold"
                android:textColor="@color/white1"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="right"
                android:layout_marginLeft="16dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>